# Redox

./: Cargo.toml  README.md  Redox.code-workspace
redox-core/: Cargo.toml  README.md
redox-core/benches/: benchmarks.rs
redox-core/src/: boot_rom.rs  communication_bus.rs  cpu.rs  data_access_type.rs  lib.rs  privilege_level.rs  utils.rs  vm.rs
redox-core/src/com_bus/: com_bus_io.rs  communication_bus.rs  device_error.rs  mod.rs  random_device.rs  test_debug_device.rs
redox-core/src/compile/: compiler.rs  decompiler.rs
redox-core/src/compiler/: bytecode_compiler.rs  bytecode_decompiler.rs
redox-core/src/compiling/: compiler.rs  decompiler.rs  executable.rs  labels.rs  mod.rs
redox-core/src/ins/: expression.rs  expressions.rs  instruction.rs  jump_expression.rs  mod.rs  move_expressions.rs  op_codes.rs
redox-core/src/mem/: mapped_memory.rs  memory_handler.rs  mod.rs
redox-core/src/parse/: asm_parser.rs  type_hints.rs
redox-core/src/parsing/: asm_parser.rs  data_declaration.rs  mod.rs  type_hints.rs
redox-core/src/reg/: mod.rs  register.rs  registers.rs
redox-parser/: Cargo.toml
redox-parser/src/: asm_parser.rs  lib.rs  type_hints.rs
redox-terminal/: Cargo.toml  README.md  build.rs
redox-terminal/src/: main.rs
src/: boot_rom.rs  cpu.rs  data_access_type.rs  main.rs  privilege_level.rs  ram.rs  security_context.rs  utils.rs  vm.rs
src/compiler/: bytecode_compiler.rs  bytecode_decompiler.rs  mod.rs
src/ins/: instruction.rs  mod.rs  move_expressions.rs  op_codes.rs
src/mem/: mapped_memory.rs  mapped_memory_region.rs  memory.rs  memory_block_reader.rs  memory_handler.rs  memory_interface.rs  mod.rs  ram.rs
src/reg/: register.rs  registers.rs
