[workspace]
resolver = "2"

members = ["redox-core", "redox-terminal"]
default-members = ["redox-terminal", "redox-core"]

[workspace.dependencies]
criterion = "0.5.1"
enumflags2 = "0.7.10"
float-cmp = "0.9.0"
hashbrown = "0.14.5"
itertools = "0.13.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
prettytable = "0.10.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.61"
winres = "0.1.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
#panic = "abort"
