[workspace]
resolver = "2"

members = ["redox-core", "redox-terminal"]
default-members = ["redox-terminal", "redox-core"]

[workspace.dependencies]
criterion = "0.8.1"
enumflags2 = "0.7.12"
float-cmp = "0.10.0"
hashbrown = "0.16.1"
itertools = "0.14.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
prettytable = "0.10.0"
rand = "0.9.2"
rand_core = "0.9.3"
rand_xoshiro = "0.7.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
unescape = "0.1.0"
unicode-segmentation = "1.12.0"
winres = "0.1.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
#panic = "abort"
