[package]
name = "redox_core"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A new toy virtual machine, assembler and compiler, written in Rust."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/Redox"
homepage = "https://github.com/sciguyryan/Redox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
float-cmp.workspace = true
num-traits.workspace = true
num-derive.workspace = true
prettytable.workspace = true
rand.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
divan.workspace = true

[features]
default = ["stack-type-hints"]
stack-type-hints = []
instruction-caching = []

[[bench]]
name = "benchmarks"
harness = false
