[package]
name = "redox_core"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A new toy virtual machine, assembler and compiler, written in Rust."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/Redox"
homepage = "https://github.com/sciguyryan/Redox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
float-cmp.workspace = true
hashbrown.workspace = true
num-traits.workspace = true
num-derive.workspace = true
prettytable.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = ["stack-type-hints"]
stack-type-hints = []

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
