[package]
name = "redox_parser"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A new toy virtual machine, assembler and compiler, written in Rust."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/Redox"
homepage = "https://github.com/sciguyryan/Redox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum.workspace = true
strum_macros.workspace = true
redox_core = { path = "../redox-core" }

[dev-dependencies]

[features]
default = []
