[package]
name = "redox_terminal"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "LGPL-2.1-only"
license-file = "LICENSE"
description = "A testing terminal for Redox"
repository = "https://github.com/sciguyryan/Redox"
homepage = "https://github.com/sciguyryan/Redox"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
redox_core = { path = "../redox-core" }

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true
